# reify

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  IDEAS  README.md  REVIEW_PART_1.md  REVIEW_PART_2.md  SECURITY.md  TODO.md  TODO1.md  TODO_FINAL1.md  deny.toml  docker-compose.example.env  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
reify/: Cargo.toml
reify-bench/: Cargo.toml
reify-bench/benches/: bytecount.rs
reify-bench/src/: main.rs  runner.rs
reify-bench/src/scenarios/: diesel.rs  mod.rs  model.rs  reify.rs  rusqlite_raw.rs  seaorm.rs  sqlx_raw.rs
reify-cli/: Cargo.toml
reify-cli/src/: main.rs
reify-core/: Cargo.toml
reify-core/benches/: build_insert_many.rs  build_select.rs  from_row.rs  rewrite_placeholders.rs
reify-core/src/: adapter.rs  audit.rs  built_query.rs  column.rs  condition.rs  db.rs  enumeration.rs  func.rs  hooks.rs  ident.rs  lib.rs  migration.rs  paginate.rs  query.rs  range.rs  relation.rs  rls.rs  schema.rs  soft_delete.rs  sql.rs  table.rs  telemetry.rs  value.rs  view.rs
reify-core/src/migration/: codegen.rs  context.rs  ddl.rs  diff.rs  error.rs  lock.rs  mod.rs  mod_tests_diff.rs  mod_tests_views.rs  plan.rs  runner.rs  test_support.rs  traits.rs
reify-core/src/migration/runner/: apply.rs  entries.rs  hooks.rs  inspect.rs  mod.rs  plans.rs  queries.rs  rollback.rs
reify-core/src/query/: delete.rs  insert.rs  join.rs  mod.rs  select.rs  update.rs  with.rs
reify-core/src/types/: cidr.rs  inet.rs  interval.rs  macaddr.rs  mod.rs  point.rs
reify-macros/: Cargo.toml
reify-macros/src/: db_enum.rs  helpers.rs  lib.rs  partial_model.rs  relations.rs  table.rs  view.rs
reify-mysql/: Cargo.toml
reify-mysql/src/: lib.rs
reify-postgres/: Cargo.toml
reify-postgres/src/: copy.rs  lib.rs
reify-sqlite/: Cargo.toml
reify-sqlite/src/: lib.rs
reify/examples/: audit.rs  basic.rs  dto.rs  dto_validation.rs  indexes.rs  pagination.rs  range_types.rs  returning_old_new.rs  rls.rs  schema_builder.rs  string_functions.rs  timestamps.rs  views.rs
reify/src/: lib.rs
reify/tests/: array_types.rs  audit_tests.rs  batch_upsert.rs  builder_type_safety.rs  complex_types.rs  computed_columns.rs  cursor_pagination.rs  derive_enum.rs  derive_table.rs  distinct.rs  dto_basic.rs  dto_validation.rs  func_tests.rs  group_by.rs  integration.rs  migration_tests.rs  range_types.rs  relations.rs  soft_delete.rs  sql_injection.rs  subquery.rs  timestamps.rs
reify/tests/compile_fail/: column_unknown_attr.rs  column_unknown_attr.stderr  creation_timestamp_on_string.rs  creation_timestamp_on_string.stderr  db_enum_unknown_attr.rs  db_enum_unknown_attr.stderr  dto_skip_unknown_field.rs  dto_skip_unknown_field.stderr  duplicate_column_attr.rs  duplicate_column_attr.stderr  immutable_no_delete.rs  immutable_no_delete.stderr  immutable_no_update.rs  immutable_no_update.stderr  missing_table_name.rs  missing_table_name.stderr  primary_key_on_option.rs  primary_key_on_option.stderr  soft_delete_non_datetime.rs  soft_delete_non_datetime.stderr  soft_delete_non_option.rs  soft_delete_non_option.stderr  source_db_without_timestamp.rs  source_db_without_timestamp.stderr  validate_unknown_rule.rs  validate_without_dto_validation.rs
reify/tests/integration/: common.rs  mysql_audit_chain.rs  mysql_basic.rs  mysql_dto.rs  mysql_errors.rs  mysql_migrations.rs  mysql_sql_injection.rs  pg_arrays.rs  pg_audit_chain.rs  pg_basic.rs  pg_copy.rs  pg_dto.rs  pg_errors.rs  pg_migrations.rs  pg_soft_delete.rs  pg_sql_injection.rs  sqlite_audit_chain.rs  sqlite_basic.rs  sqlite_dto.rs  sqlite_enum.rs  sqlite_insert_many.rs  sqlite_migrations.rs  sqlite_pagination.rs  sqlite_relations.rs  sqlite_sql_injection.rs  sqlite_timestamps.rs  sqlite_upsert.rs
scripts/: fmt.sh  run-unit-tests.sh  seed-issues.sh
