[package]
name = "reify-bench"
version.workspace = true
edition.workspace = true
authors = ["Yohann Catherine"]
description = "Comparative benchmark orchestrator for Reify ORM vs Diesel, SeaORM, sqlx"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yohann-catherine/reify"
publish = false
rust-version.workspace = true

[[bin]]
name = "reify-bench"
path = "src/main.rs"

# The source references `#[cfg(feature = "comparative")]` and
# `#[cfg(feature = "dto-validation")]` to gate optional bench scenarios
# (diesel/seaorm/sqlx and validator-backed paths). They are intentionally
# inert at this stage — declaring them as actual features would force
# compilation of code that depends on crates not in this graph. Instead
# we whitelist the cfg names so `--check-cfg` (clippy/rustc) stops
# warning about unrecognised values.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("comparative", "dto-validation"))',
] }

# The orchestrator deliberately has no database dependencies. Each
# framework lives in its own sibling crate (reify-bench-{reify,rusqlite,
# diesel,seaorm,sqlx}) so their conflicting `links = "sqlite3"` native deps
# never share a dependency graph. The orchestrator spawns each child binary
# and aggregates its JSON output.

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
reify = { path = "../reify", features = ["sqlite"] }
reify-core = { path = "../reify-core" }
rusqlite = { version = "0.39", features = ["bundled"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bytecount"
harness = false
