[package]
name = "reify-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reify"
path = "src/main.rs"

[dependencies]
reify-core = { path = "../reify-core", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
