[package]
name = "reify-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reify"
path = "src/main.rs"

[features]
default = ["postgres", "mysql", "sqlite"]
postgres = ["dep:reify-postgres", "dep:deadpool-postgres", "dep:tokio-postgres"]
mysql = ["dep:reify-mysql"]
sqlite = ["dep:reify-sqlite"]

[dependencies]
reify-core = { path = "../reify-core", version = "0.1.0" }
reify-postgres = { path = "../reify-postgres", version = "0.1.0", optional = true }
reify-mysql = { path = "../reify-mysql", version = "0.1.0", optional = true }
reify-sqlite = { path = "../reify-sqlite", version = "0.1.0", optional = true }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
deadpool-postgres = { version = "0.14", optional = true }
tokio-postgres = { version = "0.7", optional = true }
