[package]
name = "reify-core"
version.workspace = true
edition.workspace = true

[features]
default = []
postgres = ["dep:chrono", "dep:uuid", "dep:serde_json"]
mysql = ["dep:chrono"]

[dependencies]
tracing = "0.1"
chrono = { version = "0.4", optional = true, features = ["serde"] }
uuid = { version = "1", optional = true, features = ["v4"] }
serde_json = { version = "1", optional = true }
futures-core = "0.3.32"
futures-util = "0.3.32"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "build_select"
harness = false

[[bench]]
name = "build_insert_many"
harness = false

[[bench]]
name = "rewrite_placeholders"
harness = false

[[bench]]
name = "from_row"
harness = false
