[package]
name = "reify-core"
version.workspace = true
edition.workspace = true
authors = ["Yohann Catherine"]
description = "Core traits and query builder for Reify ORM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yohann-catherine/reify"
documentation = "https://docs.rs/reify-core"
keywords = ["orm", "database", "sql", "query-builder"]
categories = ["database", "asynchronous"]
rust-version = "1.90.0"

[features]
default = []
postgres = ["dep:chrono", "dep:uuid", "dep:serde_json"]
mysql = ["dep:chrono"]
metrics = ["dep:metrics"]

[dependencies]
tracing = "0.1"
metrics = { version = "0.24", optional = true }
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", optional = true, features = ["serde"] }
uuid = { version = "1", optional = true, features = ["v4"] }
serde_json = { version = "1", optional = true }
futures-core = "0.3.32"
futures-util = "0.3.32"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "build_select"
harness = false

[[bench]]
name = "build_insert_many"
harness = false

[[bench]]
name = "rewrite_placeholders"
harness = false

[[bench]]
name = "from_row"
harness = false
