[package]
name = "reify-macros"
version.workspace = true
edition.workspace = true
authors = ["Yohann Catherine"]
description = "Proc-macros for Reify ORM: #[derive(Table)]"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yohann-catherine/reify"
documentation = "https://docs.rs/reify-macros"
keywords = ["orm", "database", "macro", "derive"]
categories = ["database", "development-tools::procedural-macro-helpers"]
rust-version.workspace = true

[lib]
proc-macro = true

[features]
default = []
dto = []
dto-validation = ["dto"]

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
