[package]
name = "reify-mysql"
version.workspace = true
edition.workspace = true
authors = ["Yohann Catherine"]
description = "MySQL/MariaDB adapter for Reify ORM (mysql_async)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yohann-catherine/reify"
documentation = "https://docs.rs/reify-mysql"
keywords = ["orm", "mysql", "mariadb", "database", "async"]
categories = ["database", "asynchronous"]
rust-version.workspace = true

[features]
postgres = ["reify-core/postgres"]

[dependencies]
reify-core = { path = "../reify-core", version = "0.1.0", features = ["mysql"] }
mysql_async = { version = "0.36", default-features = false, features = ["default-rustls"] }
tokio = { version = "1", features = ["sync", "rt"] }
tokio-stream = "0.1"
futures-util = "0.3.32"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
