[package]
name = "reify-postgres"
version.workspace = true
edition.workspace = true
authors = ["Yohann Catherine"]
description = "PostgreSQL adapter for Reify ORM (tokio-postgres)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yohann-catherine/reify"
documentation = "https://docs.rs/reify-postgres"
keywords = ["orm", "postgresql", "database", "async"]
categories = ["database", "asynchronous"]
rust-version = "1.85"

[dependencies]
reify-core = { path = "../reify-core", version = "0.1.0", features = ["postgres"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
postgres-protocol = "0.6"
postgres-types = "0.2"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
bytes = "1"
futures-util = "0.3.32"
