[package]
name = "reify"
version.workspace = true
edition.workspace = true

[features]
default = []
postgres = ["dep:reify-postgres", "reify-core/postgres"]
mysql = ["dep:reify-mysql", "reify-core/mysql"]
sqlite = ["dep:reify-sqlite"]
dto = ["reify-macros/dto"]
dto-validation = ["reify-macros/dto-validation", "dto", "dep:validator"]
integration-tests = ["postgres", "mysql", "sqlite"]

[dependencies]
reify-core = { path = "../reify-core", version = "0.1.0" }
reify-macros = { path = "../reify-macros", version = "0.1.0" }
reify-postgres = { path = "../reify-postgres", version = "0.1.0", optional = true }
reify-mysql = { path = "../reify-mysql", version = "0.1.0", optional = true }
reify-sqlite = { path = "../reify-sqlite", version = "0.1.0", optional = true }
validator = { version = "0.19", features = ["derive"], optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
trybuild = { version = "1", features = ["diff"] }
