[package]
name = "reify"
version.workspace = true
edition.workspace = true
authors = ["Yohann Catherine"]
description = "Type-safe Rust ORM: Define your database in Rust. Zero magic strings."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yohann-catherine/reify"
documentation = "https://docs.rs/reify"
readme = "README.md"
keywords = ["orm", "database", "sql", "type-safe", "macro"]
categories = ["database", "asynchronous", "web-programming"]
rust-version = "1.85"

[features]
default = []
postgres = ["dep:reify-postgres", "reify-core/postgres", "reify-sqlite?/postgres", "reify-mysql?/postgres"]
mysql = ["dep:reify-mysql", "reify-core/mysql", "reify-sqlite?/mysql"]
sqlite = ["dep:reify-sqlite"]
dto = ["reify-macros/dto"]
dto-validation = ["reify-macros/dto-validation", "dto", "dep:validator"]
integration-tests = ["postgres", "mysql", "sqlite"]

[dependencies]
reify-core = { path = "../reify-core", version = "0.1.0" }
reify-macros = { path = "../reify-macros", version = "0.1.0" }
reify-postgres = { path = "../reify-postgres", version = "0.1.0", optional = true }
reify-mysql = { path = "../reify-mysql", version = "0.1.0", optional = true }
reify-sqlite = { path = "../reify-sqlite", version = "0.1.0", optional = true }
validator = { version = "0.20", features = ["derive"], optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
trybuild = { version = "1", features = ["diff"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
