[package]
name = "reify"
version.workspace = true
edition.workspace = true
authors = ["Yohann Catherine"]
description = "Type-safe Rust ORM: Define your database in Rust. Zero magic strings."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yohann-catherine/reify"
documentation = "https://docs.rs/reify"
readme = "README.md"
keywords = ["orm", "database", "sql", "type-safe", "macro"]
categories = ["database", "asynchronous", "web-programming"]
rust-version.workspace = true

[features]
default = []
postgres = ["dep:reify-postgres", "reify-core/postgres", "reify-sqlite?/postgres", "reify-mysql?/postgres"]
postgres18 = ["postgres", "reify-core/postgres18"]
mysql = ["dep:reify-mysql", "reify-core/mysql", "reify-sqlite?/mysql"]
sqlite = ["dep:reify-sqlite"]
dto = ["reify-macros/dto"]
dto-validation = ["reify-macros/dto-validation", "dto", "dep:validator"]
metrics = ["reify-core/metrics"]
# Per-adapter integration-test sub-features. Each one only compiles
# the corresponding adapter + its integration tests, so a contributor
# with only one DB installed does not need the others.
#
# Every sub-feature pulls in `dto` so the DTO-aware test files
# (`pg_dto.rs`, `mysql_dto.rs`, `sqlite_dto.rs`) compile out of the
# box — the DTO macro is part of the public API and deserves
# integration coverage.
pg-integration-tests = ["postgres", "dto"]
mysql-integration-tests = ["mysql", "dto"]
sqlite-integration-tests = ["sqlite", "dto"]
# Aggregate feature: runs the whole integration matrix.
integration-tests = [
    "pg-integration-tests",
    "mysql-integration-tests",
    "sqlite-integration-tests",
]

[dependencies]
reify-core = { path = "../reify-core", version = "0.1.0" }
reify-macros = { path = "../reify-macros", version = "0.1.0" }
reify-postgres = { path = "../reify-postgres", version = "0.1.0", optional = true }
reify-mysql = { path = "../reify-mysql", version = "0.1.0", optional = true }
reify-sqlite = { path = "../reify-sqlite", version = "0.1.0", optional = true }
validator = { version = "0.20", features = ["derive"], optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
trybuild = { version = "1", features = ["diff"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
